--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
         width: 100%;
         height: 100%;
       }
+      #gh-link{
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
     <div id="logo-container">
       <svg id="logo-svg" width="512px" height="512px" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <title>Peter</title>
+        <a id="gh-link" xlink:href="https://github.com/psehong">
         <defs></defs>
         <g id="letter" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
           <g id="512-copy-2">
