--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.ico" />
+    <link rel="canonical" href="https://www.hongpeter.com">
     <style>
       html, body {
         height: 100%;
